Closed
Bug 219355
Opened 22 years ago
Closed 22 years ago
XML Parsing Error: undefined entity on files with Mime-Type: application/xhtml+xml, including about:, or "text/xml"
Categories
(Core :: XML, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.6alpha
People
(Reporter: steffen.wilberg, Assigned: benjamin)
References
Details
(Keywords: regression, xhtml, Whiteboard: [win32 Installer builds only])
Attachments
(3 files)
|
482 bytes,
application/xhtml+xml
|
Details | |
|
482 bytes,
text/html
|
Details | |
|
798 bytes,
patch
|
hjtoi-bugzilla
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030915
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030915
An XML Parsing Error is displayed on files which are served as
"application/xhtml+xml" or "text/xml" and which use Latin-1 entities like ©
or symbols like α.
Reproducible: Always
Steps to Reproduce:
1. Open about:
Actual Results:
An XML Parsing Error: undefined entity is displayed.
On the about: page, it complains about ©
Expected Results:
It should display the page.
Special entities like < are not affected.
Files with MIME-type "text/html" are not affected.
Read about XHTML entities at
http://www.w3.org/TR/xhtml-modularization/dtd_module_defs.html#a_xhtml_character_entities
| Reporter | ||
Updated•22 years ago
|
Keywords: regression
| Reporter | ||
Comment 1•22 years ago
|
||
No problem with special entites. It fails at the first Latin-1 entity, ¡.
| Reporter | ||
Comment 2•22 years ago
|
||
Exactly the same file, but with MIME-type text/html. This works fine.
| Reporter | ||
Comment 3•22 years ago
|
||
Still works with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b)
Gecko/20030912 (trunk).
Comment 4•22 years ago
|
||
Can you narrow the regression date some more, possibly? There are many checkins
in those three days...
Comment 5•22 years ago
|
||
*** Bug 219396 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 6•22 years ago
|
||
I can only reproduce this with installer-sea-builds.
2003-09-12-09-installer-sea: wfm.
2003-09-15-10-installer-sea: broken.
2003-09-16-04-installer-sea: broken.
2003-09-16-04, just zip: wfm.
I tried several GDI/libart/mathml builds, they either crashed on startup or wfm.
There are no trunk builds with installer between 09/12 and 09/15, sorry.
Comment 7•22 years ago
|
||
*** Bug 219411 has been marked as a duplicate of this bug. ***
Comment 8•22 years ago
|
||
Hmm.. sounds like a packaging issue, then. Maybe fallout from bug 179834?
Comment 9•22 years ago
|
||
this bug is WFM with today's linux "installer-sea" build. is this windows only
by chance?
Comment 10•22 years ago
|
||
packaging issues are often one-platform-only...
Comment 11•22 years ago
|
||
*** Bug 219421 has been marked as a duplicate of this bug. ***
In installations that have this problem, search for "xhtml11.dtd" file. If you
cannot find it, or it is not under <bin>/res/dtd (or whatever that is changed to
by bug bug 179834), then it is a packaging issue and that file was not installed
correctly.
Comment 13•22 years ago
|
||
*** Bug 219445 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 14•22 years ago
|
||
definitely my regression
Assignee: hjtoi-bugzilla → bsmedberg
Depends on: 179834
Priority: -- → P1
Whiteboard: [win32 Installer builds only]
Target Milestone: --- → mozilla1.6alpha
| Assignee | ||
Comment 15•22 years ago
|
||
this should fix it...
| Assignee | ||
Updated•22 years ago
|
Attachment #131594 -
Flags: superreview?(darin)
Attachment #131594 -
Flags: review?(hjtoi-bugzilla)
Comment 16•22 years ago
|
||
*** Bug 219453 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Attachment #131594 -
Flags: superreview?(darin) → superreview+
| Reporter | ||
Comment 17•22 years ago
|
||
xhtml11.dtd is missing in the affected builds. It's in res\dtd in the other builds.
Updated•22 years ago
|
Attachment #131594 -
Flags: review?(hjtoi-bugzilla) → review+
| Assignee | ||
Comment 18•22 years ago
|
||
fixed on trunk
| Assignee | ||
Comment 19•22 years ago
|
||
.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 20•22 years ago
|
||
*** Bug 219729 has been marked as a duplicate of this bug. ***
Comment 21•22 years ago
|
||
*** Bug 219897 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 22•22 years ago
|
||
Thanks. It works again with
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6a) Gecko/20030923
->verified.
Status: RESOLVED → VERIFIED
Comment 23•22 years ago
|
||
This appears to be broken for me - using 1.6, 1.7 and Firefox branch from
20040626....
http://www.dougsdvds.info/bug.html - validates XHTML strict, is OK with
numerical reference, but barfs on the entity reference...
| Reporter | ||
Comment 24•22 years ago
|
||
validator.w3.org says: "This Page Is Valid -//W3C//DTD XHTML 1.1 Strict//EN!"
But that's not XHTML 1.1. The proper doctype is:
<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
But you're using:
<!DOCTYPE html
PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN"
"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
There is no 1.1 strict. Use the correct doctype and it works. Use the validator
again and notice that it complains about a bunch of errors in your testcase.
Comment 25•22 years ago
|
||
um.. OK Thanks
I previously had 1.0 Strict, and simply changed the numbers to refer to 1.1 -
when the validator didn't complain and presented me with a valid 1.1 logo to
stick on the page, silly me thought that was OK!
Sounds like a bug in the validator then - shouldn't it complain about (a)my
dodgy doctype and (b) those other errors?!
You need to log in
before you can comment on or make changes to this bug.
Description
•