bug 219355 (regression from bug 179834) - XML parsing errors (entity not found) - r=heikki sr=darin